# Simplifier

./: CMakeLists.txt  LICENSE  README.md
Src/: Edge.cpp  Edge.hpp  Extras.cpp  Extras.hpp  Geometry.cpp  Geometry.hpp  Logger.hpp  STL.cpp  STL.hpp  SimplifierApp.cpp  SimplifierApp.hpp  Simplify.cpp  Simplify.hpp  main.cpp
